udpate end state

--- a/02_01_e.ipynb
+++ b/02_01_e.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[autogen.oai.client: 09-28 01:32:46] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
+      "[autogen.oai.client: 09-30 05:28:02] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[autogen.oai.client: 09-28 01:33:13] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
+      "[autogen.oai.client: 09-30 05:28:26] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
      ]
     }
    ],
@@ -773,8 +773,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[autogen.oai.client: 09-28 01:37:02] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n",
-      "[autogen.oai.client: 09-28 01:37:02] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
+      "[autogen.oai.client: 09-30 05:30:39] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n",
+      "[autogen.oai.client: 09-30 05:30:39] {164} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n"
      ]
     }
    ],
@@ -786,7 +786,12 @@
     "        \"config_list\": config_list\n",
     "    },\n",
     "    human_input_mode=\"NEVER\",\n",
-    "    is_termination_msg=lambda msg: \"exit\" in msg[\"content\"],\n",
+    "    is_termination_msg=lambda m\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
     ")\n",
     "\n",
     "tutor = ConversableAgent(\n",
